--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,38 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Shift Images</title>
     <style>
-        /* Your existing CSS styles */
+        html, body {
+            margin: 0; padding: 0;
+            width: 100%; height: 100%;
+            background-color: white;
+            display: flex; flex-direction: column; align-items: center;
+        }
+        #header {
+            position: fixed;
+            top: 10px;
+            left: 0; right: 0;
+            text-align: center;
+            font-size: 24px;
+            color: black;
+            padding: 10px 0;
+        }
+        #image-container {
+            width: 90vw;
+            height: 90vh;
+            margin-top: 60px;
+            display: flex; justify-content: center; align-items: center;
+        }
+        img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+            display: none;
+        }
+        img.active {
+            display: block;
+        }
     </style>
 </head>
 <body>
